--- a/documentation/documentation.gradle
+++ b/documentation/documentation.gradle
@@ -60,6 +60,8 @@ dependencies {
 	testImplementation jakartaLibs.jsonb
 	testImplementation libs.jacksonXml
 
+	testImplementation 'org.jsoup:jsoup:1.15.2'
+
 	testRuntimeOnly testLibs.wildFlyTxnClient
 	testRuntimeOnly(libs.ehcache3) {
 		capabilities {
